# POSSystems

./: .replit  app.py  config.py  cookies.txt  data_initialization.py  main.py  models.py  pyproject.toml  replit.md
.local/state/replit/agent/: .latest.json
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-pos-Did-yo-1759080085062_1759080085063.txt  Pasted--BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-pos-Did-yo-1759081538182_1759081538182.txt  Pasted--POS-Point-of-Sale--1758834539936_1758834539936.txt  Pasted--TypeError-TypeError-Object-of-type-Row-is-not-JSON-serializable-Traceback-most-recent-call-l-1758973554120_1758973554120.txt  Pasted--UndefinedError-jinja2-exceptions-UndefinedError-UserRole-is-undefined-Traceback-most-recen-1758972987124_1758972987126.txt
instance/: pos_system.db
services/: analytics_service.py  cache_service.py  pagination_service.py  product_service.py  transaction_service.py
static/css/: material-design.css
static/js/: keyboard-shortcuts.js  theme-manager.js  toast-notifications.js
templates/: 404.html  500.html  base.html  dashboard.html  inventory.html  pos.html  reports.html
templates/auth/: login.html  register.html  users.html
utils/: helpers.py  image_processing.py  language.py
views/: __init__.py  auth.py  cache_api.py  inventory.py  pos.py  reports.py
