[project]
name = "pos-system"
version = "0.1.0"
description = "Point of Sale System for Kazakhstan market"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.4",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "flask-bcrypt>=1.0.1",
    "redis>=6.4.0",
    "flask-caching>=2.3.1",
]

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"*" = ["templates/**/*", "static/**/*"]
